fixed masthead spacing

--- a/static/css/lanyon.css
+++ b/static/css/lanyon.css
@@ -113,7 +113,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 900;
   font-size: 150%;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 3rem;
   color: #D6CB43;
 }
 .masthead-title a {
